# radio-curses

./: .flake8  .gitignore  LICENSE  README.rst  pyproject.toml
.github/workflows/: pypi-publish.yml
radio_curses/: __init__.py  __main__.py  curses_utils.py  db.py  utils.py
radio_curses/curses_utils/: __init__.py  app.py  list1.py  list1m.py  text.py  win.py
