[project]
name = 'radio-curses'
description = 'A OPML radio player'
authors = [
    {name = "Shamil Bikineyev", email = "shamilbi@gmail.com"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
urls.homepage = 'https://github.com/shamilbi/radio-curses'

license='MIT'
license-files = ["LICENSE"]

requires-python = ">=3.9"
dependencies = [
    'lxml',
    'requests',
    'xdg-base-dirs'
]

dynamic = ["version"]
scripts.radio-curses = "radio_curses.__main__:main"

keywords = [
    'internet',
    'radio',
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "radio_curses/__init__.py"

[tool.hatch.build]
ignore-vcs = true
include = [
    "radio_curses",
]
exclude = [
    '*.tmp',
]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pylint]
"messages control".disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
]
reports.score = false
format.max-line-length = 120

[tool.isort]
line_length = 120

[tool.ruff.lint]
ignore = [
    "E741",  # Ambiguous variable name: `l`
]
